docker-k8s-workshop/day3/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-clusterip-service
spec:
  selector:
    app: flask-app
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
