docker-k8s-workshop/day3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /flask-app
            pathType: Prefix
            backend:
              service:
                name: flask-clusterip-service
                port:
                  number: 8080
